--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,3 +1,4 @@
+make a functional test with inserting some matches
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 rename league tables to ranking tables
