--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,8 @@ when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 
 == NOTES TO LATER ==
+add pager to recent matches
+add helper text to ranking rule form
 merge users
 delete users
 enter result in cup
