--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,7 +1,12 @@
+validate ranking sets
+validate ranking rules
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 
 == NOTES TO LATER ==
+reintroduce match processed, but on ranking level
+rewrite all bindrequests to just bind
+rewrite get->security.text->getToken()->getUser() to ->getUser
 add pager to recent matches
 add helper text to ranking rule form
 merge users
