Added default facebook bundle.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,7 @@ when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 
 == NOTES TO LATER ==
+update translations with symfony command
 match integration facebook, share match
 add custom fields on profiles
 batch assign users to a league
